# VLABench

./: pyproject.toml
VLABench/evaluation/evaluator/: base.py
tutorials/: 1.load_task.ipynb  2.auto_trajectory_generate.ipynb  3.process_dataset.ipynb  4.teleoperate.ipynb  5.run_evaluation.ipynb
